# slang-prototype

./: .githooks.ini  README.md  README.rst  pyproject.toml
tests/: test_slang_prototype.py
tools/git-hooks/: pre_commit.sh
